# kubetorch

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: build_docs.yaml  docs_tutorial_smoke.yaml  gpu_tests.yaml  kubetorch-release.yaml  minimal_deployment_tests.yaml  minimal_tests.yaml  qwen3_asr_edgellm_export_image.yaml  qwen3_asr_quant_image.yaml  qwen3_asr_runner_image.yaml  unit_tests.yaml
docs/: kubetorch-fork-install-upgrade.md
examples/: README.md
examples/qwen3_asr_orin/: Dockerfile.edgellm-export  Dockerfile.edgellm-hosttrt  Dockerfile.quant  Dockerfile.runner  Dockerfile.sglang-orin  README.md  pyproject.toml
examples/qwen3_asr_orin/qwen3_asr_orin/: __init__.py  benchmark.py  cli.py  client.py  compare.py  datasets.py  edgellm_results.py  metrics.py  quantize.py
examples/qwen3_asr_orin/scripts/: edgellm_quant_export_smoke.py
examples/qwen3_asr_orin/tests/: test_benchmark.py  test_cli.py  test_client.py  test_edgellm_export_smoke.py  test_edgellm_results.py  test_manifest.py  test_metrics.py  test_quantize.py
examples/wetlandbirds_shakedown/: Dockerfile  README.md  pyproject.toml
examples/wetlandbirds_shakedown/tests/: test_bioclip_eval.py  test_bioclip_smoke.py  test_cli_commands.py  test_datasets_io.py  test_eval_metrics.py  test_ingest.py  test_packaging.py  test_reporting.py
examples/wetlandbirds_shakedown/wetlandbirds_shakedown/: __init__.py  bioclip_eval.py  bioclip_smoke.py  cleanup.py  cli.py  constants.py  datasets_io.py  env_probe.py  eval_metrics.py  ingest.py  reporting.py
python_client/: README.md  pyproject.toml
release/: README.md  build_images.sh  publish_all.sh  publish_chart.sh  sync_version.py
(+186 files in other folders)
