[project]
name = "kubetorch-wetlandbirds-shakedown"
version = "0.1.0"
description = "Kubetorch batch-run shakedown for Visual WetlandBirds on a local GPU cluster"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.32.0",
    "numpy>=2.0.0",
    "opencv-python-headless>=4.10.0",
    "open-clip-torch>=3.0.0",
    "pandas>=2.2.0",
    "pillow>=10.4.0",
    "rich>=13.9.0",
    "torch>=2.5.0",
    "torchcodec>=0.1,<0.2",
    "torchvision>=0.20.0",
    "tqdm>=4.67.0",
    "typer>=0.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
wetlandbirds-shakedown = "wetlandbirds_shakedown.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wetlandbirds_shakedown"]
